# oono-clean

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/classifier/: mod.rs
src-tauri/src/cleanup/: mod.rs
src-tauri/src/cleanup/executors/: file_delete.rs  macos_cli.rs  mod.rs
src-tauri/src/commands/: cleanup.rs
src-tauri/src/models/: scan.rs
src-tauri/src/scanner/: mod.rs
src-tauri/src/scanner/recipes/: android.rs  docker.rs  macos.rs  mod.rs  node.rs  system.rs  xcode.rs
src/components/: EmptyState.tsx  Guide.tsx  Header.tsx  ScanView.tsx
src/lib/: types.ts
src/lib/stores/: theme.ts
