[package]
name = "onesweep"
version = "0.1.0"
description = "Find and reclaim disk space on macOS"
authors = []
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "onesweep_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "5"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
